# slash

./: .slash_history  .slash_startup_commands  CMakeLists.txt  README.md  command.cpp  command.h  install_slash.cpp  main.cpp
abstractions/: definitions.h  iofuncs.cpp  iofuncs.h
commands/: ansi.cpp  ascii.cpp  clear.cpp  del.cpp  encode.cpp  kill.cpp  ls.cpp  mkdir.cpp  mkf.cpp  netinfo.cpp  procs.cpp  read.cpp  term.cpp
src/: cmd_highlighter.cpp  cmd_highlighter.h  command.cpp  command.h  help_helper.cpp  help_helper.h  main.cpp
src/abstractions/: colors.h  definitions.h  info.cpp  info.h  information.h  iofuncs.cpp  iofuncs.h  json.cpp  json.h
src/builtin-cmds/: alias.cpp  alias.h  cd.cpp  cd.h  help.cpp  help.h  jobs.cpp  jobs.h  slash-greeting.cpp  slash-greeting.h  var.cpp  var.h
src/core/: cnf.cpp  cnf.h  execution.cpp  execution.h  exiter.cpp  exiter.h  jobs.cpp  jobs.h  parser.cpp  parser.h  prompt.cpp  prompt.h  startup.cpp  startup.h
src/data/: settings.json
src/git/: git.cpp  git.h
src/slash-utils/: acart.cpp  ansi.cpp  ascii.cpp  clear.cpp  cmsh.cpp  create.cpp  csv.cpp  datetime.cpp  del.cpp  disku.cpp  dump.cpp  echo.cpp  encode.cpp  eol.cpp  fnd.cpp  hex.cpp  listen.cpp  ls.cpp  lynx.cpp  md.cpp  mkdir.cpp  mkf.cpp  move.cpp  netinfo.cpp  pager.cpp  perms.cpp  procs.cpp  pss  read.cpp  ren.cpp  rf.cpp  srch.cpp  sumcheck.cpp  textmt.cpp
src/slash-utils/syntax_highlighting/: colors.h  cpp.h  go.h  helper.h  java.h  js.h  lua.h  python.h  rust.h
src/tui/: tui.cpp  tui.h
